--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="./style.css">
 <body>
     <div id="root"> Not Render</div>
-  <script type="module" src="./app.jsx">
+  <script type="module" src="./App.jsx">
   </script>
 </body>
 </html>
