--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <link rel="stylesheet" href="./style.css">
 <body>
+  <div id="modal"></div>
     <div id="root"> Not Render</div>
   <script type="module" src="./App.jsx">
   </script>
